--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -57,4 +57,10 @@
             android:layout_alignParentRight="true"
             />
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/baby_title"
+        android:layout_above="@id/baby_bottom"
+        tools:text="1231k23131"/>
 </RelativeLayout>
