--- a/app/src/main/res/layout/item_baby.xml
+++ b/app/src/main/res/layout/item_baby.xml
@@ -11,6 +11,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/holo_blue_bright"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -75,7 +76,7 @@
                     android:layout_height="20dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="@{viewModel.getLikeColor}"
+                    android:src="@{viewModel.getLike}"
                     />
             </RelativeLayout>
             <TextView
